--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,13 +1,86 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
 
-  
+  <ion-row class="ion-justify-content-center">
+    <ion-col size="6">
+
+      <ion-row class="perfil">
+
+        <ion-col size="4" class="perfil">
+          <img src={{this.perfil.foto}}>
+        </ion-col>
+
+        <ion-col size="8">
+
+          <ion-item class="nome" lines="none">
+            <h1>{{this.perfil.nome}}</h1>
+          </ion-item>
+
+          <ion-item class="nome" lines="none">
+            <ion-label>
+              <h2>{{this.perfil.profissao}}</h2>
+              <h2>{{this.perfil.insta}}</h2>
+              <h2> {{this.perfil.idioma}}</h2>
+              <h2>{{this.perfil.cidade}}</h2>
+              <h2>{{this.perfil.comeco}}</h2>
+            </ion-label>
+          </ion-item>
+        </ion-col>
+
+        <ion-label class="ion-justify-content-center" size="4">
+          <h1>{{this.perfil.biografia}}</h1>
+          <h2>{{this.perfil.texto}}</h2>
+          <br>
+        </ion-label>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="4">
+          <ion-item lines="none">
+            <h1>{{this.metrica.curtidas}}</h1>
+          </ion-item>
+          <ion-item lines="none">
+            <h2>Curtidas</h2>
+          </ion-item>
+        </ion-col>
+
+        <ion-col size="4">
+          <ion-item lines="none">
+            <h1>{{this.metrica.seguindo}}</h1>
+          </ion-item>
+          <ion-item lines="none" class="ion-display-flex">
+            <h2>Seguindo</h2>
+          </ion-item>
+        </ion-col>
+
+        <ion-col size="4">
+          <ion-item lines="none">
+            <h1>{{this.metrica.seguidores}}</h1>
+          </ion-item>
+          <ion-item lines="none" class="ion-display-flex">
+            <h2>Seguidores</h2>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col>
+          <ion-label>
+            POSTAGEM DE AMIGOS
+          </ion-label>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="6">
+          <img src="{{this.feed.post1}}" class="post">
+        </ion-col>
+      </ion-row>
+
+
+
+
+
+    </ion-col>
+  </ion-row>
 
 </ion-content>
